# CMakeList.txt : Top-level CMake project file, do global configuration
# and include sub-projects here.
#
cmake_minimum_required (VERSION 3.8)

project ("C++ Excercises")

# Include sub-projects.
add_subdirectory ("Ex1. Pointers References and C Functions")
add_subdirectory ("Ex2. Arrays and Pitfalls")
add_subdirectory ("Ex3. Virtual and Const")
add_subdirectory ("Ex4. Defines Pragmas and Templates")
